# mhai-mvp

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  README.md  loveai.db  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
conda/: dev.yaml
containers/: Dockerfile
docs/: contributing.md  example.ipynb  index.md  installation.md
docs/api/: references.md
research/: counsel-chat.ipynb  counsel_chat.py  dash-patient.ipynb
src/loveai_mvp/: __init__.py  __main__.py  audio.py  cli.py  core.py  dashboard.py  db.py  evaluation.py  profiles.py  sentimental.py  ui.py
src/loveai_mvp/data/profiles/ai/: ai.yaml
src/loveai_mvp/data/profiles/users/: ivan.yaml
src/loveai_mvp/gpt_models/: __init__.py  config.py  simple.py  standalone.py
src/loveai_mvp/utils/: text.py
tests/: __init__.py  test_audio.py  test_gui.py  test_main.py
tests/data/inputs/: sadness.txt
tests/experiments/: ex_audio_pyaudio.py  ex_audio_sounddevice.py  ex_edge_tts.py  ex_sentimental.py
